<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <!--
        In the above cardview widget
        cardelevation property will give elevation to your card view
        card corner radius will provide radius to your card view
        card background color will give background color to your card view
        card max elevation will give the cardview maximum elevation
        card prevent corner overlap will add padding to CardView on v20 and
        before to prevent intersections between the Card content and rounded corners.
        card use compact padding will add padding in API v21+ as well to have the same
        measurements with previous versions.
    -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="580dp">


        <ImageView
            android:id="@+id/imgScreenReturn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/new_arrow" />

        <TextView
            android:id="@+id/idCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgScreenReturn"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_name"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idCreditsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgScreenReturn"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:paddingRight="30dp"
            android:text="@string/course_price"
            app:drawableStartCompat="@drawable/ic_credit" />


        <TextView
            android:id="@+id/idSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idCourseName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="Section" />

        <TextView
            android:id="@+id/idTVCourseRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idCourseName"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:paddingRight="35dp"
            android:text="@string/course_rating"
            app:drawableStartCompat="@drawable/ic_star" />

        <EditText
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_below="@id/idSection"
            android:layout_marginTop="1dp"
            android:ems="@integer/config_navAnimTime"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/idUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/username" />

        <TextView
            android:id="@+id/idDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idUser"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/course_desc" />

        <TextView
            android:id="@+id/idMeetingDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idDesc"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Meeting Details"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_below="@id/idMeetingDetails"
            android:layout_marginTop="1dp"
            android:ems="@integer/config_navAnimTime"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/idDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idMeetingDetails"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:inputType="date"
            android:ems="10"
            android:hint=" Date" />

        <TextView
            android:id="@+id/idStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_below="@id/idDate"
            android:text="Will start at"/>

        <EditText
            android:id="@+id/idStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/idDate"
            android:background="@drawable/input_bg"
            android:text="      "
            android:layout_toRightOf="@id/idStart"
            />

        <TextView
            android:id="@+id/idFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_below="@id/idDate"
            android:text="and last till"
            android:layout_toRightOf="@id/idStartTime"
            />

        <EditText
            android:id="@+id/idFinishTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/idDate"
            android:text="      "
            android:background="@drawable/input_bg"
            android:layout_toRightOf="@id/idFinish"
            />

        <TextView
            android:id="@+id/idDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idStart"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Notes"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/idObservations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idDetails"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/course_obs" />

        <EditText
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_below="@id/idObservations"
            android:layout_marginTop="1dp"
            android:ems="@integer/config_navAnimTime"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/idTxtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_3"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:paddingRight="30dp"
            android:text="@string/course_price"
            android:textSize="18dp"
            app:drawableStartCompat="@drawable/ic_credit" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_below="@id/line_3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="Buy"
            app:backgroundTint="#F29F9F" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
